start (create Card, CardsList)

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
-.nav {
+.app__basket {
   display: flex;
-  margin: 20px;
+  flex-direction: column;
+  width: 5%;
+  margin: 25px auto;
+}
 
-  * {
-    margin-right: 10px;
-  }
+.app__cards {
+  display: flex;
+  justify-content: center;
 }
